[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tq-kinetic-transport-v9"
version = "9.0.0"
description = "Mixed-angular-order collision-split transport with moment-preserving quantization and process-memory profiling"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
  "psutil>=5.9",
  "numba>=0.57",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
